--- a/Contacts App/main.css
+++ b/Contacts App/main.css
@@ -12,8 +12,20 @@ body {
     height: 50px;
     margin: 0 auto;
     padding: 40px 0;
+    label {
+    margin: 25px 0 0 0;
+    }
 }
 
 .spinner label {
     margin: 25px 0 0 0;
+}
+
+.profile-photo {
+    width: 30px;
+    height: 30px;
+}
+
+.table>tbody>tr>td {
+    vertical-align: middle;
 }
