--- a/Contacts App/templates/form.html
+++ b/Contacts App/templates/form.html
@@ -42,6 +42,7 @@
 </div>
 <div class="form-group">
     <label class="col-sm-3 control-label">Birthday</label>
+    // using bs-datepicker from angularStrap
     <div class="col-sm-9">
         <input type="text"
                name="bday"
