--- a/Contacts App/main.css
+++ b/Contacts App/main.css
@@ -12,9 +12,6 @@ body {
     height: 50px;
     margin: 0 auto;
     padding: 40px 0;
-    label {
-    margin: 25px 0 0 0;
-    }
 }
 
 .spinner label {
@@ -26,6 +23,27 @@ body {
     height: 30px;
 }
 
-.table>tbody>tr>td {
+.table > tbody > tr > td {
     vertical-align: middle;
+}
+
+.modal-backdrop.am-fade {
+    opacity: .5;
+    transition: opacity .15s linear;
+}
+
+.modal-backdrop.am-fade.ng-enter {
+    opacity: 0;
+}
+
+.modal-backdrop.am-fade.ng-enter.ng-enter-active {
+    opacity: .5;
+}
+
+.modal-backdrop.am-fade.ng-leave {
+    opacity: .5;
+}
+
+.modal-backdrop.am-fade.ng-leave.ng-leave-active {
+    opacity: 0;
 }
