feat: adding font awesome and fixing table columns

--- a/Contacts App/main.css
+++ b/Contacts App/main.css
@@ -47,3 +47,30 @@ body {
 .modal-backdrop.am-fade.ng-leave.ng-leave-active {
     opacity: 0;
 }
+
+.sortables {
+    display: inline-block;
+    position: relative;
+    width: 20px;
+    height: 20px;
+    vertical-align: middle;
+}
+
+.sortables span:first-child {
+    position: absolute;
+    top: 0;
+}
+
+.sortables span:last-child {
+    position: absolute;
+    bottom: 0;
+}
+
+.sortables span {
+    color: lightgray;
+    font-size: 18px;
+}
+
+.sortables span:hover {
+    color: #002a80;
+}
