feat: adding edit ui.route using ui-sref over ng-href and seting parameters

--- a/Contacts App/templates/form.html
+++ b/Contacts App/templates/form.html
@@ -87,8 +87,11 @@
     </div>
 
 </div>
-<div class="buttons">
-    <button class="btn btn-primary btn-block"
+<div class="buttons pull-right">
+    <button class="btn btn-default"
+            type="destroy">Cancel
+    </button>
+    <button class="btn btn-primary"
             ladda="contacts.isSaving"
             type="submit">Save
     </button>
