feat: creating edit state

--- a/Contacts App/templates/edit.html
+++ b/Contacts App/templates/edit.html
@@ -7,7 +7,7 @@
             </button>
         </div>
         <div class="panel-body">
-            <form id="appForm" class="form-horizontal" ng-submit="save()" novalidate>
+            <form class="form-horizontal" ng-submit="save()" novalidate>
                 <ng-include src="'templates/form.html'"></ng-include>
             </form>
         </div>
