--- a/Contacts App/templates/form.html
+++ b/Contacts App/templates/form.html
@@ -89,7 +89,7 @@
 </div>
 <div class="buttons pull-right">
     <button class="btn btn-default"
-            ng-click="this.cancel()">Cancel
+            ng-click="cancel()">Cancel
     </button>
     <button class="btn btn-primary"
             ladda="contacts.isSaving"
