feat: creating create contact state

--- a/Contacts App/templates/form.html
+++ b/Contacts App/templates/form.html
@@ -88,9 +88,10 @@
 
 </div>
 <div class="buttons pull-right">
-    <button class="btn btn-default"
+<!--    <button class="btn btn-default"
             ng-click="cancel()">Cancel
     </button>
+    -->
     <button class="btn btn-primary"
             ladda="contacts.isSaving"
             type="submit">Save
