--- a/Contacts App/templates/searchform.html
+++ b/Contacts App/templates/searchform.html
@@ -1,6 +1,8 @@
 <form class="navbar-form">
     <div class="form-group">
-        <input ng-model="contacts.search" type="text" class="search form-control navbar-form input-sm" id="search" placeholder="Search ..."/>
+        <input ng-model="contacts.search"
+               ng-model-option="{ debounce: 300}"
+               type="text" class="search form-control navbar-form input-sm" id="search" placeholder="Search ..."/>
     </div>
     <div class="form-group">
         <select class="form-control navbar-form input-sm" ng-model="contacts.ordering">
