--- a/Contacts App/templates/list.html
+++ b/Contacts App/templates/list.html
@@ -32,7 +32,5 @@
     No results for '<b>{{ contacts.search }}</b>'
 </div>
 
-<div class="spinner" ng-show="contacts.isLoading">
-    <span us-spinner="{radius:8, width:5, lenght:3, lines:9}"></span>
-    <label>Loading...</label>
-</div>
+<!-- ccSpinner = cc-spinner -->
+<cc-spinner></cc-spinner>
