feat: defining directives

--- a/Contacts App/templates/list.html
+++ b/Contacts App/templates/list.html
@@ -32,5 +32,11 @@
     No results for '<b>{{ contacts.search }}</b>'
 </div>
 
-<!-- ccSpinner = cc-spinner -->
-<cc-spinner></cc-spinner>
+<!--
+ccSpinner = cc-spinner
+<div cc-spinner> A/ttribute
+<div class="cc-spinner"> C/lass
+<cc-spinner></cc-spinner> E/lement
+Restrict AEC for all
+-->
+<div class="cc-spinner"></div>
