feat: using transclude to replace html

--- a/Contacts App/templates/list.html
+++ b/Contacts App/templates/list.html
@@ -39,4 +39,6 @@ ccSpinner = cc-spinner
 <cc-spinner></cc-spinner> E/lement
 Restrict AEC for all
 -->
-<div class="cc-spinner"></div>
+<cc-spinner>
+    <span>Mooing...</span>
+</cc-spinner>
