--- a/Contacts App/templates/list.html
+++ b/Contacts App/templates/list.html
@@ -39,6 +39,6 @@ ccSpinner = cc-spinner
 <cc-spinner></cc-spinner> E/lement
 Restrict AEC for all
 -->
-<cc-spinner>
-    <span>Mooing...</span>
+<cc-spinner is-loading="contacts.isLoading">
+    <span>Loading......</span>
 </cc-spinner>
