--- a/Contacts App/templates/spinner.html
+++ b/Contacts App/templates/spinner.html
@@ -1,4 +1,4 @@
-<div class="spinner" ng-show="contacts.isLoading">
+<div class="spinner" ng-show="isLoading">
     <span us-spinner="{radius:8, width:5, lenght:3, lines:9}"></span>
     <label ng-transclude="">Loading...</label>
 </div>
