--- a/Contacts App/templates/spinner.html
+++ b/Contacts App/templates/spinner.html
@@ -1,4 +1,5 @@
 <div class="spinner" ng-show="isLoading">
     <span us-spinner="{radius:8, width:5, lenght:3, lines:9}"></span>
-    <label ng-transclude="">Loading...</label>
+    <!-- label ng-transclude="">Loading...</label -->
+    <label>{{ message }}</label>
 </div>
